--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -476,6 +476,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "LOG_FILE = f\"{datetime.now().strftime('%m_%d_%Y_%H_%m_%S')}.log\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(LOG_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\ramazan\\\\Desktop\\\\genAiProject\\\\experiment\\\\logs'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LOG_FILE = f\"{datetime.now().strftime('%m_%d_%Y_%H_%m_%S')}.log\"\n",
+    "\n",
+    "log_path = os.path.join(os.getcwd(), \"logs\") # create a path for a new folder\n",
+    "os.makedirs(log_path, exist_ok=True)\n",
+    "log_path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
